# lso

./: .gitignore  Cargo.toml  readme.md
migrations/: 20240125031233_create_explain_table.sql  20240126082640_create_analyze_result_table.sql
src/: cli.rs  domain.rs  main.rs  templates.rs
src/analyzers/: mod.rs  no_index_match_analyzer.rs
src/routes/: common.rs  mod.rs  response.rs
templates/: index.html  journals.html  txn_detail.html
