[package]
name = "lso"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 or MIT"

build = "build.rs"

[dependencies]
anyhow = "1.0.79"
dotenv = "0.15.0"
futures-util = "0.3.30"
log = { version = "0.4.20", features = [] }
mysql_async = "0.33.0"
pretty_env_logger = "0.5.0"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.6.1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "migrate", "macros", "time", "uuid"] }
axum = { version = "0.7.4", features = ["ws"] }
askama = "0.12.1"
clap = { version = "4", features = ["derive"] }
